crates/wac-parser/tests/resolution/fail/duplicate-enum-case.wac
enum e {
    a,
    b,
    c,
    b,
}